# invision-tools

./: .gitignore  LICENSE  README.md  Snakefile  config.yaml  environment.yml  plan.md  run_snakemake.sh  sw_test.ipynb
R-functions/: model_utils.R
globus_docker/: Dockerfile  commands.txt
gui/: config.yaml  file_ops.py  gui_components.py  main.py  onedrive_utils.py  pyproject.toml  snakemake_runner.py  ssh_utils.py
plot/: plot_tracks.R
sleap/: Snakefile  config.yaml  run_snakemake.sh
sleap/mosquitoes/: Snakefile  config.yaml
sleap/planaria/: Snakefile  config.yaml
slurm/: batch_link.sh  batch_track.sh  track.sh  track_highmemory.sh
slurm-profile/: config.v8+.yaml
testing/: link_merge.ipynb  link_merge.py  photosensation_test.ipynb
testing/agent-testing/: README.txt  generate_backgrounds.py  guide.md  optimze_tracking.py  pyproject.toml  run_parameter_sweep.py
utils/: cat_stores.py  convert_pickle_to_feather.py  ex_config.yml  link_trajectories.py  nw_testing.ipynb  split_wells.py  store_to_seq.py  tracking.py
