[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "miracidia-tracking-optimizer"
version = "0.1.0"
description = "Parameter optimization for miracidia tracking using TrackPy"
readme = "README.txt"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "trackpy>=0.6.0",
    "opencv-python>=4.8.0",
    "matplotlib>=3.8.0",
    "scikit-image>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
py-modules = ["optimze_tracking", "generate_backgrounds", "run_parameter_sweep"]
